[project]
name = "rules-pycross-e2e-setuptools"
version = "0.1.0"
description = "E2E tests for setuptools-based wheel builds"
authors = []
dependencies = [
    "psycopg2==2.9.10",
    "setproctitle==1.3.2",
    "setuptools==69.5.1",
    "wheel==0.37.0",
    "zstandard==0.22.0",
]
requires-python = "~=3.14.0"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
