load("@python_versions//3.10.11:defs.bzl", py_test_3_10_11 = "py_test")
load("@python_versions//3.11.6:defs.bzl", py_test_3_11_6 = "py_test")
load("@python_versions//3.12.0:defs.bzl", py_test_3_12_0 = "py_test")
load("@python_versions//3.14.0:defs.bzl", py_test_3_14_0 = "py_test")
load("@rules_pycross//pycross:defs.bzl", "pycross_wheel_build", "pycross_wheel_library")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

pycross_wheel_build(
    name = "zstandard_build",
    config_settings = {
        "--build-option": [
            "--no-cffi-backend",
            "--system-zstd",
        ],
    },
    copts = ["-Wl,-s"],
    native_deps = [
        "//third_party/zstd",
    ],
    sdist = "@uv//zstandard:sdist",
    tags = ["manual"],
    deps = [
        "@uv//:setuptools",
        "@uv//:wheel",
    ],
)

pycross_wheel_library(
    name = "zstandard",
    wheel = ":zstandard_build",
)

py_binary(
    name = "build_distutils_probe_sdist",
    srcs = ["build_distutils_probe_sdist.py"],
)

genrule(
    name = "distutils_probe_sdist",
    srcs = [
        "distutils_probe/distutils_probe_pkg/__init__.py",
        "distutils_probe/pyproject.toml",
        "distutils_probe/setup.py",
    ],
    outs = ["distutils_probe-0.1.tar.gz"],
    cmd = "\"$(location :build_distutils_probe_sdist)\" \"$@\" \"$(location distutils_probe/pyproject.toml)\" \"$(location distutils_probe/setup.py)\" \"$(location distutils_probe/distutils_probe_pkg/__init__.py)\"",
    tools = [":build_distutils_probe_sdist"],
)

# Synthetic regression probe for build dependency .pth processing inside the build venv.
pycross_wheel_build(
    name = "distutils_probe_build",
    sdist = ":distutils_probe_sdist",
    deps = [
        "@uv//:setuptools",
        "@uv//:wheel",
    ],
)

pycross_wheel_library(
    name = "distutils_probe",
    wheel = ":distutils_probe_build",
)

py_test_3_10_11(
    name = "test_zstandard_3_10_11",
    srcs = ["@rules_pycross_e2e_shared//:test_zstandard.py"],
    main = "test_zstandard.py",
    deps = [":zstandard"],
)

py_test_3_11_6(
    name = "test_zstandard_3_11_6",
    srcs = ["@rules_pycross_e2e_shared//:test_zstandard.py"],
    main = "test_zstandard.py",
    deps = [":zstandard"],
)

py_test_3_12_0(
    name = "test_zstandard_3_12_0",
    srcs = ["@rules_pycross_e2e_shared//:test_zstandard.py"],
    main = "test_zstandard.py",
    deps = [":zstandard"],
)

py_test_3_12_0(
    name = "test_distutils_probe_3_12_0",
    srcs = ["test_distutils_probe.py"],
    main = "test_distutils_probe.py",
    deps = [":distutils_probe"],
)

py_test_3_14_0(
    name = "test_zstandard_3_14_0",
    srcs = ["@rules_pycross_e2e_shared//:test_zstandard.py"],
    main = "test_zstandard.py",
    deps = [":zstandard"],
)

py_test_3_14_0(
    name = "test_distutils_probe_3_14_0",
    srcs = ["test_distutils_probe.py"],
    main = "test_distutils_probe.py",
    deps = [":distutils_probe"],
)
