[project]
name = "rules-pycross-e2e-meson"
version = "0.1.0"
description = "E2E tests for Meson-based wheel builds"
authors = []
dependencies = [
    "numpy==2.2.6",
    "pandas==2.2.3",
    "contourpy==1.3.1",
    "pywavelets==1.8.0",
    "Cython>=3.0.6",
    "meson-python>=0.15.0",
    "meson",
    "ninja",
    "pybind11",
    "versioneer[toml]",
    "setuptools",
]
requires-python = "~=3.14.0"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
