[project]
name = "rules-pycross-e2e-patches-and-hooks"
version = "0.1.0"
description = "E2E tests for pre-build patches, post-install patches, and site hooks"
authors = []
dependencies = [
    "setproctitle==1.3.2",
    "setuptools==69.5.1",
    "wheel==0.37.0",
]
requires-python = "~=3.14.0"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
