# TODO write a meaningful smoke test

#---SNIP--- Below here is re-used in the workspace snippet published on releases

# change this to something that works in your environment.
load("@python//3.12.0:defs.bzl", python_interpreter = "interpreter")
load("@rules_pycross//pycross:repositories.bzl", "rules_pycross_dependencies")

rules_pycross_dependencies(python_interpreter)
