# TODO write a meaningful smoke test

#---SNIP--- Below here is re-used in the workspace snippet published on releases

# change this to something that works in your environment.
load("@rules_pycross//pycross:repositories.bzl", "rules_pycross_dependencies")

rules_pycross_dependencies(
    python_interpreter_target = "@python_versions_3_12_0_host//:python",
)
