load("@aspect_rules_py//py:defs.bzl", "py_binary")
load("@example_lock_repo//:requirements.bzl", "requirement")

py_binary(
    name = "ipython",
    srcs = ["ipython.py"],
    deps = ["//deps:ipython"],
)

py_binary(
    name = "ipython_from_repo",
    srcs = ["ipython.py"],
    main = "ipython.py",
    deps = [requirement("ipython")],
)
