module(
    name = "example_bzlmod",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_lib", version = "3.3.1")
bazel_dep(name = "rules_python", version = "2.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.14.2",
)
use_repo(python, "python_versions")

bazel_dep(name = "rules_pycross", version = "0.0.0")
local_path_override(
    module_name = "rules_pycross",
    path = "../..",
)

pycross = use_extension("@rules_pycross//pycross/extensions:pycross.bzl", "pycross")
pycross.configure_toolchains(
    platforms = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-linux-musl",
    ],
    python_versions = [
        "3.14.2",
    ],
)

# Import and configure environments extension to generate pycross_environments
environments = use_extension("@rules_pycross//pycross/extensions:environments.bzl", "environments")
use_repo(environments, "pycross_environments")

# Use the lock_import extension to import external lock files.
lock_import = use_extension("@rules_pycross//pycross/extensions:lock_import.bzl", "lock_import")

# Import from uv
lock_import.import_uv(
    lock_file = "//:uv.lock",
    project_file = "//:pyproject.toml",
    repo = "uv_deps",
)

# Specify per-package overrides. Here we say that we want to build ipython from an sdist.
lock_import.package(
    name = "ipython",
    always_build = True,
    build_dependencies = [
        "setuptools",
        "wheel",
    ],
    repo = "uv_deps",
)

# Specify per-package overrides. Here we say that we want certain files excluded during installation.
lock_import.package(
    name = "amqp-mock",
    install_exclude_globs = [
        "tests/**",
    ],
    repo = "uv_deps",
)
lock_import.package(
    name = "matplotlib",
    post_install_patches = [
        "@@//:matplotlib.patch",
    ],
    repo = "uv_deps",
)

# The actual repos are loaded from the lock_repos extension.
lock_repos = use_extension("@rules_pycross//pycross/extensions:lock_repos.bzl", "lock_repos")
use_repo(lock_repos, "uv_deps")
