[project]
dependencies = [
    "ipython>=8.17",
    "setuptools>=68",
    "wheel>=0.42",
    "amqp-mock==0.6.1",
]
requires-python = ">=3.10"

[tool.poetry]
name = "rules_pycross_example_bzlmod"
version = "0.1"
description = "rules_pycross_example_bzlmod"
authors = []

[tool.poetry.dependencies]
python = ">=3.10"
ipython = ">=8.17"
setuptools = ">=68"
wheel = ">=0.42"
cowsay = {url = "https://github.com/VaasuDevanS/cowsay-python/archive/refs/tags/v6.1.zip"}
