[project]
name = "rules-pycross-example-bzlmod"
version = "0.1.0"
dependencies = [
    "ipython>=8.17", "packaging @ git+https://github.com/pypa/packaging.git@23.2",
    "setuptools>=68",
    "wheel>=0.42",
]
requires-python = ">=3.14"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
